header was created (not responsive and correct dropdowns)

--- a/assets/scss/home/home.css
+++ b/assets/scss/home/home.css
@@ -148,7 +148,7 @@ header .head-up .down .search i:hover {
 }
 header .head-up .down .search input {
   position: absolute;
-  width: 550px;
+  width: 565px;
   height: 44px;
   outline: none;
   border-radius: 48px;
@@ -181,28 +181,64 @@ header .head-up .down .right-icons .compare p {
 header .head-up .down .right-icons .compare:hover > i {
   color: rgb(252, 185, 65);
 }
-header .head-up .down .right-icons .wishlist,
+header .head-up .down .right-icons .wishlist {
+  align-items: center;
+  text-align: center;
+  position: relative;
+  cursor: pointer;
+}
+header .head-up .down .right-icons .wishlist i {
+  color: white;
+  font-size: 27px;
+  transition: all 0.5s;
+}
+header .head-up .down .right-icons .wishlist p {
+  color: white;
+  margin: 0;
+  font-size: 12px;
+  opacity: 0.7;
+}
+header .head-up .down .right-icons .wishlist span {
+  position: absolute;
+  background-color: orange;
+  border-radius: 100%;
+  width: 15px;
+  height: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 2;
+  font-size: 11px;
+}
+header .head-up .down .right-icons .wishlist .wish-count {
+  right: 2px;
+  top: -4px;
+}
+header .head-up .down .right-icons .wishlist .cart-count {
+  right: -4px;
+  top: -4px;
+}
+header .head-up .down .right-icons .wishlist:hover > i {
+  color: rgb(252, 185, 65);
+}
 header .head-up .down .right-icons .cart {
   align-items: center;
   text-align: center;
   position: relative;
   cursor: pointer;
 }
-header .head-up .down .right-icons .wishlist i,
 header .head-up .down .right-icons .cart i {
-  color: white;
   font-size: 27px;
-  -webkit-text-stroke: 1px rgb(51, 51, 51);
+  -webkit-text-stroke: 1px white;
+  color: rgb(51, 51, 51);
   transition: all 0.5s;
 }
-header .head-up .down .right-icons .wishlist p,
 header .head-up .down .right-icons .cart p {
   color: white;
   margin: 0;
   font-size: 12px;
   opacity: 0.7;
 }
-header .head-up .down .right-icons .wishlist span,
 header .head-up .down .right-icons .cart span {
   position: absolute;
   background-color: orange;
@@ -215,22 +251,206 @@ header .head-up .down .right-icons .cart span {
   z-index: 2;
   font-size: 11px;
 }
-header .head-up .down .right-icons .wishlist .wish-count,
 header .head-up .down .right-icons .cart .wish-count {
   right: 2px;
   top: -4px;
 }
-header .head-up .down .right-icons .wishlist .cart-count,
 header .head-up .down .right-icons .cart .cart-count {
   right: -4px;
   top: -4px;
 }
-header .head-up .down .right-icons .wishlist:hover > i,
 header .head-up .down .right-icons .cart:hover > i {
+  -webkit-text-stroke: 1px rgb(252, 185, 65);
+  color: rgb(51, 51, 51);
+}
+header .navbar {
+  padding: 0;
+  height: 60px;
+}
+header .navbar .left {
+  margin-left: 11px;
+  display: flex;
+  align-items: center;
+  position: relative;
+  height: 60px;
+  transition: all 0.5s;
+  padding-left: 15px;
+  padding-right: 15px;
+  cursor: pointer;
+}
+header .navbar .left .fa-chevron-down {
+  position: absolute;
+  right: 15px;
+  -webkit-text-stroke: 1px white;
+}
+header .navbar .left .fa-bars {
+  margin-right: 20px;
+  font-size: 20px;
+  -webkit-text-stroke: 1px white;
+}
+header .navbar .left .fa-x {
+  margin-right: 20px;
+  font-size: 20px;
+  display: none;
+  color: white;
+  -webkit-text-stroke: 1px rgb(252, 185, 65);
+}
+header .navbar .left span {
+  font-weight: 600;
+  opacity: 0.8;
+  font-size: 15px;
+}
+header .navbar .left:hover {
+  background-color: rgb(252, 185, 65);
+}
+header .navbar .left:hover > .fa-bars {
+  -webkit-text-stroke: 1px rgb(252, 185, 65);
+  display: none;
+}
+header .navbar .left:hover > .fa-x {
+  display: block;
+}
+header .navbar .left:hover > .fa-chevron-down {
+  color: white;
+  -webkit-text-stroke: 1px rgb(252, 185, 65);
+}
+header .navbar .left:hover > span {
+  color: white;
+}
+header .navbar .left:hover > .left-dropdown {
+  display: block;
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: 60px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  height: 394px;
+}
+header .navbar .left:hover > .left-dropdown ul {
+  list-style: none;
+  padding: 0;
+}
+header .navbar .left:hover > .left-dropdown ul li {
+  border-top: 0.5px solid rgba(0, 0, 0, 0.5);
+  border-left: 0.5px solid rgba(0, 0, 0, 0.5);
+  border-right: 0.5px solid rgba(0, 0, 0, 0.5);
+  padding: 10px;
+  font-size: 15px;
+  line-height: 15px;
+  opacity: 0.7;
+  transition: all 0.3s;
+}
+header .navbar .left:hover > .left-dropdown ul li:hover {
   color: rgb(252, 185, 65);
 }
+header .navbar .left:hover > .left-dropdown ul .last-list-element {
+  border-bottom: 0.5px solid rgba(0, 0, 0, 0.5);
+}
+header .navbar .left .left-dropdown {
+  display: none;
+}
+header .navbar .center {
+  height: 100%;
+  position: relative;
+}
+header .navbar .center .left-line {
+  float: left;
+  height: 25%;
+  width: 0.5px;
+  background-color: grey;
+  opacity: 0.5;
+  position: absolute;
+  top: 28px;
+}
+header .navbar .center .right-line {
+  float: right;
+  height: 25%;
+  width: 1px;
+  background-color: grey;
+  opacity: 0.5;
+  position: absolute;
+  right: 0px;
+  top: 28px;
+}
+header .navbar .center .contents {
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 93%;
+}
+header .navbar .center .contents ul {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  width: 580px;
+  justify-content: space-around;
+}
+header .navbar .center .contents ul li {
+  display: inline-block;
+  position: relative;
+  width: 55px;
+  text-align: center;
+}
+header .navbar .center .contents ul li a {
+  text-decoration: none;
+  color: black;
+  transition: all 0.25s;
+  padding-bottom: 10px;
+}
+header .navbar .center .contents ul li a i {
+  font-size: 10px;
+  -webkit-text-stroke: 0.3px white;
+}
+header .navbar .center .contents ul li::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: -18px;
+  left: 0;
+  background-color: rgb(252, 185, 65);
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+header .navbar .center .contents ul li:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+header .navbar .center .contents ul li:hover > a {
+  color: rgb(252, 185, 65);
+}
+header .navbar .right {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+}
+header .navbar .right i {
+  margin-right: 13px;
+  font-size: 13px;
+}
+header .navbar .right span {
+  font-weight: 500;
+  font-size: 15px;
+}
+header .navbar .right span span {
+  opacity: 0.6;
+}
+header .header-line {
+  position: relative;
+  bottom: 16px;
+}
 
-.container {
+.container-edit {
   width: 1188px !important;
   margin: 0 auto !important;
+}
+
+.col-3,
+.col-6 {
+  padding: 0;
 }/*# sourceMappingURL=home.css.map */
